ecmascript/parser/tests/test262-error-references/fail/b61406dafcaab4b7.js.stderr
error: Expected 2 hex characters
 --> $DIR/tests/test262-parser/fail/b61406dafcaab4b7.js:1:3
  |
1 | ('\x0')
  |   ^^^

